Finish data count

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">4over6 VPN</string>
+    <string name="data_statistics_bar"> Please press Connect to begin </string>
 </resources>
