--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">4over6 VPN</string>
-    <string name="data_statistics_bar"> Click CONNECT to begin </string>
+    <string name="data_statistics_bar">Click CONNECT to begin</string>
+    <string name="default_addr">2402:f000:1:4417::900</string>
+    <string name="default_port">5678</string>
+    <string name="connect_text">CONNECT</string>
+    <string name="disconnect_text">DISCONNECT</string>
+    <string name="address_text">Address</string>
+    <string name="port_text">Port</string>
 </resources>
