--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">4over6 VPN</string>
-    <string name="data_statistics_bar">Click CONNECT to begin</string>
-    <string name="default_addr">2402:f000:1:4417::900</string>
+    <string name="default_statistics">Click CONNECT to begin</string>
+    <string name="default_addr">2402:f000:4:72:808::9a47</string>
     <string name="default_port">5678</string>
     <string name="connect_text">CONNECT</string>
     <string name="disconnect_text">DISCONNECT</string>
